force-app/main/default/objects/Client_Setup_Sheet__c/fields/Expected_Hours__c.field-meta.xml
<CustomField>
    <fullName>Expected_Hours__c</fullName>
    <formula>CASE( Program_Size__c ,
&apos;0.5&apos;,1,
&apos;1&apos;,2,
&apos;1.5&apos;,3,
&apos;2&apos;,4,
&apos;2.5&apos;,5,
&apos;3&apos;,6,
&apos;3.5&apos;,7,
&apos;4&apos;,8,
&apos;4.5&apos;,9,
&apos;5&apos;,10,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>