force-app/main/default/objects/Client_Setup_Sheet__c/fields/Explanation_for_Half_Program__c.field-meta.xml
<CustomField>
    <fullName>Explanation_for_Half_Program__c</fullName>
    <label>Explanation for Half Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Market Availability</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>