force-app/main/default/objects/Client_Setup_Sheet__c/fields/Final_Update_Made__c.field-meta.xml
<CustomField>
    <fullName>Final_Update_Made__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Background field to stop multiple updates</description>
    <label>Final Update Made</label>
    <type>Checkbox</type>
</CustomField>