force-app/main/default/objects/Client_Setup_Sheet__c/fields/First_Billing_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>First_Billing_Month_Year__c</fullName>
    <label>First Billing Month/Year</label>
    <type>Date</type>
</CustomField>