force-app/main/default/objects/Client_Setup_Sheet__c/fields/First_Right_of_Refusal__c.field-meta.xml
<CustomField>
    <fullName>First_Right_of_Refusal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Right of Refusal</label>
    <type>Checkbox</type>
</CustomField>