force-app/main/default/objects/Client_Setup_Sheet__c/fields/First_Right_of_Refusal_Description__c.field-meta.xml
<CustomField>
    <fullName>First_Right_of_Refusal_Description__c</fullName>
    <label>First Right of Refusal Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>