force-app/main/default/objects/Client_Setup_Sheet__c/fields/First_Right_of_Refusal_Metro_Area_3__c.field-meta.xml
<CustomField>
    <fullName>First_Right_of_Refusal_Metro_Area_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Right of Refusal Metro Area 3</label>
    <referenceTo>Metro_Area__c</referenceTo>
    <relationshipLabel>Client Setup Sheets (First Right of Refusal Metro Area 3)</relationshipLabel>
    <relationshipName>Client_Setup_Sheets3</relationshipName>
    <type>Lookup</type>
</CustomField>