force-app/main/default/objects/Client_Setup_Sheet__c/fields/Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Guarantee__c</fullName>
    <label>Guarantee</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>