force-app/main/default/objects/Client_Setup_Sheet__c/fields/Has_Assets__c.field-meta.xml
<CustomField>
    <fullName>Has_Assets__c</fullName>
    <formula>IF( OR(ISPICKVAL(Marketing_Assets__c, &apos;None&apos;),ISPICKVAL(Marketing_Assets__c, &apos;Landing Page Only&apos;),ISBLANK(text(Marketing_Assets__c))),FALSE,TRUE)</formula>
    <label>Has Assets</label>
    <type>Checkbox</type>
</CustomField>