force-app/main/default/objects/Client_Setup_Sheet__c/fields/High_Priority_Client__c.field-meta.xml
<CustomField>
    <fullName>High_Priority_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Priority Client</label>
    <type>Checkbox</type>
</CustomField>