force-app/main/default/objects/Client_Setup_Sheet__c/fields/High_Priority_Client_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>High_Priority_Client_Reasoning__c</fullName>
    <label>High Priority Client Reasoning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>