force-app/main/default/objects/Client_Setup_Sheet__c/fields/How_much_does_your_serviceproduct_cost__c.field-meta.xml
<CustomField>
    <fullName>How_much_does_your_serviceproduct_cost__c</fullName>
    <label>What is the pricing structure?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>