force-app/main/default/objects/Client_Setup_Sheet__c/fields/If_No_Who_Approved_Client__c.field-meta.xml
<CustomField>
    <fullName>If_No_Who_Approved_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>If No, Who Approved Client?</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Setup_Sheets5</relationshipName>
    <type>Lookup</type>
</CustomField>