force-app/main/default/objects/Client_Setup_Sheet__c/fields/Implementation_Director_Approved__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Director_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sale Approved</label>
    <type>Checkbox</type>
</CustomField>