force-app/main/default/objects/Client_Setup_Sheet__c/fields/Implementation_Director_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Director_Feedback__c</fullName>
    <label>What required special approval?</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>