force-app/main/default/objects/Client_Setup_Sheet__c/fields/Implementation_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Explanation__c</fullName>
    <label>Implementation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>