force-app/main/default/objects/Client_Setup_Sheet__c/fields/Implementation_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Manager_Email__c</fullName>
    <description>Used in Implementation Welcome Email alert</description>
    <formula>Implementation_Project_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Manager Email</label>
    <type>Text</type>
</CustomField>