force-app/main/default/objects/Client_Setup_Sheet__c/fields/Implementation_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Manager_Phone__c</fullName>
    <description>Used in Implementation Welcome email alert</description>
    <formula>Implementation_Project_Manager__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Manager Phone</label>
    <type>Text</type>
</CustomField>