force-app/main/default/objects/Client_Setup_Sheet__c/fields/Implementation_Packet_URL__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Packet_URL__c</fullName>
    <description>Used on Implementation Welcome Email</description>
    <formula>Company_Name__r.Creative_Brief_Edit_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Packet URL</label>
    <type>Text</type>
</CustomField>