force-app/main/default/objects/Client_Setup_Sheet__c/fields/Implementation_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Project Manager</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Implementation Specialist</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Implementation Manager</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Setup_Sheets7</relationshipName>
    <type>Lookup</type>
</CustomField>