force-app/main/default/objects/Client_Setup_Sheet__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abstrakt</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
                <label>Advertising &amp; Marketing</label>
            </value>
            <value>
                <fullName>Allergy Testing</fullName>
            </value>
            <value>
                <fullName>Architecture, Engineering &amp; Design</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Commercial Cleaning</fullName>
            </value>
            <value>
                <fullName>Commercial Electric</fullName>
            </value>
            <value>
                <fullName>Commercial Fire Protection</fullName>
            </value>
            <value>
                <fullName>Commercial Flooring</fullName>
            </value>
            <value>
                <fullName>Commercial Improvement</fullName>
            </value>
            <value>
                <fullName>Commercial Real Estate</fullName>
            </value>
            <value>
                <fullName>Commercial Roofing</fullName>
            </value>
            <value>
                <fullName>Concrete/Asphalt Services</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Copy/Print</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Direct Mail and Printing</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>HR &amp; Staffing</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Commercial Insurance</fullName>
                <label>Insurance</label>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Landscape Services</fullName>
            </value>
            <value>
                <fullName>LED Lighting</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Material Handling</fullName>
            </value>
            <value>
                <fullName>Media &amp; Event Production</fullName>
            </value>
            <value>
                <fullName>Merger &amp; Acquisition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>