force-app/main/default/objects/Client_Setup_Sheet__c/fields/IPM_Can_Welcome_Client__c.field-meta.xml
<CustomField>
    <fullName>IPM_Can_Welcome_Client__c</fullName>
    <label>IPM Can Welcome Client?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>