force-app/main/default/objects/Client_Setup_Sheet__c/fields/Is_the_list_in_Excel_with_phone_numbers__c.field-meta.xml
<CustomField>
    <fullName>Is_the_list_in_Excel_with_phone_numbers__c</fullName>
    <label>Is the list in Excel with phone numbers?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>