force-app/main/default/objects/Client_Setup_Sheet__c/fields/Kickoff_Meeting_Data__c.field-meta.xml
<CustomField>
    <fullName>Kickoff_Meeting_Data__c</fullName>
    <inlineHelpText>Pulled from the AMC Kickoff Meeting Date field and updated via automation</inlineHelpText>
    <label>Kickoff Meeting Date</label>
    <type>Date</type>
</CustomField>