force-app/main/default/objects/Client_Setup_Sheet__c/fields/Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if the client is going with new pardot landing page rather than marketing assets</inlineHelpText>
    <label>Landing Page</label>
    <type>Checkbox</type>
</CustomField>