force-app/main/default/objects/Client_Setup_Sheet__c/fields/Last_day_to_Rescind__c.field-meta.xml
<CustomField>
    <fullName>Last_day_to_Rescind__c</fullName>
    <description>Update with date when &quot;Can Rescind during Implementation&quot; = Yes</description>
    <inlineHelpText>Update with date when &quot;Can Rescind during Implementation&quot; = Yes</inlineHelpText>
    <label>Last Day to Rescind</label>
    <type>Date</type>
</CustomField>