force-app/main/default/objects/Client_Setup_Sheet__c/fields/List_All_Services_Discussed__c.field-meta.xml
<CustomField>
    <fullName>List_All_Services_Discussed__c</fullName>
    <label>List All Services Discussed</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>