force-app/main/default/objects/Client_Setup_Sheet__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <formula>Sale_Price__c +  Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sale Price + Discount Amount</inlineHelpText>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>