force-app/main/default/objects/Client_Setup_Sheet__c/fields/List_Services_Offered_Outside_Scope__c.field-meta.xml
<CustomField>
    <fullName>List_Services_Offered_Outside_Scope__c</fullName>
    <label>List Services Offered Outside Scope</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>