force-app/main/default/objects/Client_Setup_Sheet__c/fields/Mail_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Mail_Quantity__c</fullName>
    <label>Mail Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>