force-app/main/default/objects/Client_Setup_Sheet__c/fields/Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Setup Sheets</relationshipLabel>
    <relationshipName>Client_Setup_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>