force-app/main/default/objects/Client_Setup_Sheet__c/fields/Main_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_First_Name__c</fullName>
    <formula>Main_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Contact First Name</label>
    <type>Text</type>
</CustomField>