force-app/main/default/objects/Client_Setup_Sheet__c/fields/Marketing_Assets__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Assets__c</fullName>
    <label>Assets Provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landing Page Only</fullName>
            </value>
            <value>
                <fullName>Landing Page and Marketing Collateral</fullName>
            </value>
            <value>
                <fullName>No Landing Page (Marketing Collateral Only)</fullName>
            </value>
            <value>
                <fullName>No Landing Page or Marketing Collateral</fullName>
            </value>
            <value>
                <fullName>Landing Page</fullName>
                <isActive>false</isActive>
                <label>Landing Page</label>
            </value>
            <value>
                <fullName>Landing Page and Updated Assets</fullName>
                <isActive>false</isActive>
                <label>Landing Page and Updated Assets</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Standard</fullName>
                <isActive>false</isActive>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Upgraded</fullName>
                <isActive>false</isActive>
                <label>Upgraded</label>
            </value>
            <value>
                <fullName>Upgraded Assets Only</fullName>
                <isActive>false</isActive>
                <label>Upgraded Assets Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>