force-app/main/default/objects/Client_Setup_Sheet__c/fields/Marketing_Assets_Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Assets_Additional_Notes__c</fullName>
    <label>Marketing Assets Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>