force-app/main/default/objects/Client_Setup_Sheet__c/fields/Marketing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to track Marketing Manager allocations during implementation.</description>
    <label>Marketing Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Setup_Sheets9</relationshipName>
    <type>Lookup</type>
</CustomField>