force-app/main/default/objects/Client_Setup_Sheet__c/fields/Metro_Area__c.field-meta.xml
<CustomField>
    <fullName>Metro_Area__c</fullName>
    <label>Metro Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aberdeen, SD</fullName>
            </value>
            <value>
                <fullName>Aberdeen, WA</fullName>
            </value>
            <value>
                <fullName>Abilene, TX</fullName>
            </value>
            <value>
                <fullName>Ada, OK</fullName>
            </value>
            <value>
                <fullName>AK NONMETROPOLITAN AREA</fullName>
            </value>
            <value>
                <fullName>Akron, OH</fullName>
            </value>
            <value>
                <fullName>Alamogordo, NM</fullName>
            </value>
            <value>
                <fullName>Albany, GA</fullName>
            </value>
            <value>
                <fullName>Albany-Schenectady, NY</fullName>
            </value>
            <value>
                <fullName>Albert Lea, MN</fullName>
            </value>
            <value>
                <fullName>Albuquerque-Santa Fe-Las Vegas, NM</fullName>
            </value>
            <value>
                <fullName>Alexandria, LA</fullName>
            </value>
            <value>
                <fullName>Alexandria, MN</fullName>
            </value>
            <value>
                <fullName>Allentown-Bethlehem-Easton, PA-NJ</fullName>
            </value>
            <value>
                <fullName>Alpena, MI</fullName>
            </value>
            <value>
                <fullName>Altoona, PA</fullName>
            </value>
            <value>
                <fullName>Altus, OK</fullName>
            </value>
            <value>
                <fullName>Amarillo-Borger, TX</fullName>
            </value>
            <value>
                <fullName>Americus, GA</fullName>
            </value>
            <value>
                <fullName>Ames, IA</fullName>
            </value>
            <value>
                <fullName>Anderson, IN</fullName>
            </value>
            <value>
                <fullName>Anderson, SC</fullName>
            </value>
            <value>
                <fullName>Anniston-Oxford-Jacksonville, AL</fullName>
            </value>
            <value>
                <fullName>Appleton-Oshkosh-Neenah, WI</fullName>
            </value>
            <value>
                <fullName>Ardmore, OK</fullName>
            </value>
            <value>
                <fullName>Arkadelphia, AR</fullName>
            </value>
            <value>
                <fullName>Asheville-Brevard, NC</fullName>
            </value>
            <value>
                <fullName>Athens-Clark County, GA</fullName>
            </value>
            <value>
                <fullName>Atlanta, GA</fullName>
            </value>
            <value>
                <fullName>Atlantic City-Ocean City, NJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>