force-app/main/default/objects/Client_Setup_Sheet__c/fields/Metro_Area_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Metro_Area_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractual Metro Area</label>
    <referenceTo>Metro_Area__c</referenceTo>
    <relationshipLabel>Client Setup Sheets</relationshipLabel>
    <relationshipName>Client_Setup_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>