force-app/main/default/objects/Client_Setup_Sheet__c/fields/Name_on_DL__c.field-meta.xml
<CustomField>
    <fullName>Name_on_DL__c</fullName>
    <label>Name on DL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>