force-app/main/default/objects/Client_Setup_Sheet__c/fields/New_Account_Required__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Account Required</label>
    <type>Checkbox</type>
</CustomField>