force-app/main/default/objects/Client_Setup_Sheet__c/fields/of_Guaranteed_Appointments_Sapper__c.field-meta.xml
<CustomField>
    <fullName>of_Guaranteed_Appointments_Sapper__c</fullName>
    <inlineHelpText>Put the number of guaranteed appointments via contract based on the guarantee. Ex:) If it is monthly guarantee of 5 appts input 5. If is is a yearly guarantee of 120 input 120.</inlineHelpText>
    <label># of Guaranteed Appointments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>