force-app/main/default/objects/Client_Setup_Sheet__c/fields/Original_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract_Start_Date__c</fullName>
    <description>This field is populated automatically when the Contract Start Date value is first populated. Its used as a benchmark to track if a client has pushed.</description>
    <inlineHelpText>This field is populated automatically when the Contract Start Date value is first populated. Its used as a benchmark to track if a client has pushed.</inlineHelpText>
    <label>Original Contract Start Date</label>
    <type>Date</type>
</CustomField>