force-app/main/default/objects/Client_Setup_Sheet__c/fields/Other_Industry_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Industry_Description__c</fullName>
    <label>Other Industry Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>