force-app/main/default/objects/Client_Setup_Sheet__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Setup Sheets (Parent Account)</relationshipLabel>
    <relationshipName>Client_Setup_Sheets1</relationshipName>
    <type>Lookup</type>
</CustomField>