force-app/main/default/objects/Client_Setup_Sheet__c/fields/Part_of_Awaiting_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_of_Awaiting_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Part of Awaiting Number</label>
    <type>Checkbox</type>
</CustomField>