force-app/main/default/objects/Client_Setup_Sheet__c/fields/Partnership_Program__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Program__c</fullName>
    <description>Used to track a sales rep&apos;s referral monies for each partnership program.</description>
    <inlineHelpText>UBT, CMIT, TeamLogic, Etc.</inlineHelpText>
    <label>Partnership Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>CityWide</fullName>
            </value>
            <value>
                <fullName>Cloudtask</fullName>
            </value>
            <value>
                <fullName>CMIT</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>TeamLogic</fullName>
            </value>
            <value>
                <fullName>UBT</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>