force-app/main/default/objects/Client_Setup_Sheet__c/fields/Partnership_Program_Global__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Program_Global__c</fullName>
    <label>Partnership Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partnership_Programs</valueSetName>
    </valueSet>
</CustomField>