force-app/main/default/objects/Client_Setup_Sheet__c/fields/Payment_Entered_in_Auto_Pay_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Payment_Entered_in_Auto_Pay_Tracker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Entered in Auto Pay Tracker</label>
    <type>Checkbox</type>
</CustomField>