force-app/main/default/objects/Client_Setup_Sheet__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Method</label>
    <type>Checkbox</type>
</CustomField>