force-app/main/default/objects/Client_Setup_Sheet__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMG Pull 10th</fullName>
            </value>
            <value>
                <fullName>AMG Pull 15th</fullName>
            </value>
            <value>
                <fullName>AMG Pull 1st</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Client Push</fullName>
            </value>
            <value>
                <fullName>Client Undecided</fullName>
                <default>true</default>
                <label>Client Undecided</label>
            </value>
            <value>
                <fullName>Existing Client - Increase Current Invoice</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
                <isActive>false</isActive>
                <label>ACH</label>
            </value>
            <value>
                <fullName>ACH (AMG Pull)</fullName>
                <isActive>false</isActive>
                <label>ACH (AMG Pull)</label>
            </value>
            <value>
                <fullName>ACH (Client Push)</fullName>
                <isActive>false</isActive>
                <label>ACH (Client Push)</label>
            </value>
            <value>
                <fullName>ACH in-bound</fullName>
                <isActive>false</isActive>
                <label>ACH in-bound</label>
            </value>
            <value>
                <fullName>Credit Card</fullName>
                <isActive>false</isActive>
                <label>Credit Card</label>
            </value>
            <value>
                <fullName>Credit Card 3%</fullName>
                <isActive>false</isActive>
                <label>Credit Card 3%</label>
            </value>
            <value>
                <fullName>Plastiq</fullName>
                <isActive>false</isActive>
                <label>Plastiq</label>
            </value>
            <value>
                <fullName>Plastiq (Client Push)</fullName>
                <isActive>false</isActive>
                <label>Plastiq (Client Push)</label>
            </value>
            <value>
                <fullName>Wire (Client Push)</fullName>
                <isActive>false</isActive>
                <label>Wire (Client Push)</label>
            </value>
            <value>
                <fullName>Wire Trans</fullName>
                <isActive>false</isActive>
                <label>Wire Trans</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>