force-app/main/default/objects/Client_Setup_Sheet__c/fields/Pipeline_Appointment_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Appointment_Guarantee__c</fullName>
    <label>Pipeline Appointment Guarantee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Appts or Dials</fullName>
            </value>
            <value>
                <fullName>Dials Only</fullName>
            </value>
            <value>
                <fullName>Appts and Dials</fullName>
            </value>
            <value>
                <fullName>Incentive Based Program</fullName>
            </value>
            <value>
                <fullName>6 Month True-Up</fullName>
                <isActive>false</isActive>
                <label>6 Month True-Up</label>
            </value>
            <value>
                <fullName>Annual Lock-In</fullName>
                <isActive>false</isActive>
                <label>Annual Lock-In</label>
            </value>
            <value>
                <fullName>Annual Lock-In with 6 Month Out</fullName>
                <isActive>false</isActive>
                <label>Annual Lock-In with 6 Month Out</label>
            </value>
            <value>
                <fullName>Commission</fullName>
                <isActive>false</isActive>
                <label>Commission</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <isActive>false</isActive>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Monthly Bonus</fullName>
                <isActive>false</isActive>
                <label>Monthly Bonus</label>
            </value>
            <value>
                <fullName>Semiannual</fullName>
                <isActive>false</isActive>
                <label>Semiannual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>